# entrainment

./: .gitignore  .readthedocs.yaml  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  MANIFEST.in  README.Rmd  README.md  README.qmd  entrainment.Rproj  pyproject.toml
analysis/: extra-figures.Rmd  hypothesis-test.Rmd  model-formulas.Rmd  notable-features.Rmd
data/labren/: readme.txt
docs/: requirements.txt
docs/report/: extra-figures.Rmd  hypothesis-test.Rmd  model-formulas.Rmd  notable-features.Rmd
docs/source/: changelog.md  conf.py  contributing.md  extra-figures.md  hypothesis-test.md  index.md  model-formulas.md  notable-features.md  reference.md  toctree.md
docs/source/_static/: custom.css
entrainment/: __init__.py  analyze_model.py  get_labren_data.py  plot_model.py  run_model.py  test_hypothesis.py  utils.py
entrainment/data/: __init__.py
entrainment/demo/: demo.py
entrainment/hypothesis/: analyze_data.py
entrainment/labren/: plot_labren.py
entrainment/model/: __init__.py  average_turtles.py  run_model.py
entrainment/utils/: __init__.py
py/: hypothesis.py  model.py  tips.py
qmd/: model-details.qmd
scr/entrainment/demo/: __init__.py
scr/entrainment/hypothesis/: __init__.py  test_hypothesis.py
scr/entrainment/labren/: __init__.py  labren.py
scr/entrainment/model/: create_turtles.py  entrain.py
scr/entrainment/utils/: utils.py
src/entrainment/: __init__.py  analyze_data.py  analyze_model.py  labren.py  plot_dynamics.py  run_model.py  test_hypothesis.py  utils.py
tests/: model-details.qmd  test.py
(+18 files in other folders)
