[build-system]
requires = [
    "alive_progress >= 3.0.1",
    "matplotlib >= 3.6.3",
    "numpy >= 1.24.1",
    "pandas >= 1.5.2",
    "python-box >= 7.0.0",
    "scipy >= 1.10.0",
    "seaborn >= 0.12.2",
    "setuptools >= 66.0.0",
    "statsmodels >= 0.13.5"
]
build-backend = "setuptools.build_meta"

[project]
name = "entrainment"
description = "Rule-based model of the light/dark cycle entrainment phenomenon"
keywords = ["entrainment", "chronobiology", "model", "complex system"]
version = "0.0.0.9000"
authors = [
    { name = "Daniel Vartanian", email = "danvartan@gmail.com" },
]
maintainers = [
    {name = "Daniel Vartanian", email = "danvartan@gmail.com"},
]
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">= 3.10"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Topic :: Scientific/Engineering",
    "Topic :: Education",
    "Topic :: Software Development :: Libraries",
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/giperbio/entrainment"
"Documentatiom" = "https://github.com/giperbio/entrainment"
"Source" = "https://github.com/giperbio/entrainment"
"Download" = "https://github.com/giperbio/entrainment/releases"
"Bug Tracker" = "https://github.com/giperbio/entrainment/issues"
